<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/first_fragment_text"
        style="@style/text_style"
        android:text="@string/first_fragment_text"/>

    <Button
        android:id="@+id/second_fragment_button"
        android:text="@string/second_fragment"
        style="@style/button_style"/>

    <Button
        android:id="@+id/third_fragment_button"
        android:text="@string/third_fragment"
        style="@style/button_style"/>

    <Button
        android:id="@+id/fourth_fragment_button"
        android:text="@string/fourth_fragment"
        style="@style/button_style"/>



</LinearLayout>